syntax = "proto3";

option csharp_namespace = "GrpcService";

package grpcservice;

service TestService {
  rpc GetTestData (TestRequest) returns (TestResponse);
}

message TestRequest {
  int32 id = 1;
  string payload = 2;
}

message TestResponse {
  int32 id = 1;
  string message = 2;
  string timestamp = 3;
  string payload = 4;
}
